--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="page__body">
     <h1 class="visually-hidden">Nerds - дизайн студия</h1>
     <header class="page__header header">
-      <div class="page__wrapper">
+      <div class="page__wrapper header__wrapper">
         <nav class="header__nav main-nav">
           <a class="main-nav__logo">
             <svg width="160" height="66" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -45,12 +45,12 @@
     <main class="page__main">
       <section class="slider">
         <h2 class="visually-hidden">Наши предложения</h2>
-        <div class="slider__wrapper">
+        <div class="slider__wrapper page__wrapper">
           <ul class="slider__list">
             <li class="slider__item slide slide_active">
               <div class="slide__wrapper">
                 <h3 class="slide__tagline">Долго, дорого, скрупулезно.</h3>
-                <p class="slide__description">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <p class="slide__description">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
                 <a class="slide__btn btn btn_md" href="#nowhere">Узнать больше</a>
               </div>
               <div class="slide__img">
@@ -59,8 +59,8 @@
             </li>
             <li class="slider-item slide">
               <div class="slide__wrapper">
-                <h3 class="slide__tagline">Любим математику как никто другой</h3>
-                <p class="slide__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+                <h3 class="slide__tagline">Любим математику <br>как никто другой</h3>
+                <p class="slide__description">Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
                 <a class="slide__btn btn btn_md" href="#nowhere">Узнать больше</a>
               </div>
               <div class="slide__img">
@@ -69,8 +69,8 @@
             </li>
             <li class="slider-item slide">
               <div class="slide__wrapper">
-                <h3 class="slide__tagline">Только ночь, только хардкор</h3>
-                <p class="slide__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <h3 class="slide__tagline">Только ночь,<br> только хардкор</h3>
+                <p class="slide__description">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
                 <a class="slide__btn btn btn_md" href="#nowhere">Узнать больше</a>
               </div>
               <div class="slide__img">
@@ -95,15 +95,15 @@
               </div>
               <h3 class="offer__title">Веб-сайты</h3>
               <p class="offer__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="offer__btn btn btn__red" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn_red" href="#nowhere">Заказать</a>
             </li>
-            <li class="offers-item offer">
+            <li class="offers__item offer">
               <div class="offer__img">
                 <img src="img/offer/illustration-2.png" width="300" height="146" alt="иллюстрация смартфона">
               </div>
               <h3 class="offer__title">Приложения</h3>
               <p class="offer__description">Покорите топ-10 приложений <br> в AppStore и Google Play</p>
-              <a class="offer__btn btn btn__green" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn_green" href="#nowhere">Заказать</a>
             </li>
             <li class="offers__item offer">
               <div class="offer__img">
@@ -111,7 +111,7 @@
               </div>
               <h3 class="offer__title">Презентации</h3>
               <p class="offer__description">Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="offer__btn btn btn__gold" href="#nowhere">Заказать</a>
+              <a class="offer__btn btn btn_gold" href="#nowhere">Заказать</a>
             </li>
           </ul>
         </section>
@@ -119,8 +119,8 @@
           <h2 class="visually-hidden">О нас</h2>
           <div class="about__left">
             <p class="about__slogan"><strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong></p>
-            <p class="about__description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <p class="list__description">Выполняем заказы на разработку:</p>
+            <p class="about__description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="about__list-description">Выполняем заказы на разработку:</p>
             <ul class="about__skills skills">
               <li class="skills__item">Веб-сайтов любой сложности</li>
               <li class="skills__item">Мобильных приложений для iOS и Android</li>
@@ -174,46 +174,69 @@
       </div>
     </main>
     <footer class="page__footer footer">
-      <div class="page__wrapper footer__map">
+      <div class="page__wrapper footer__wrapper">
+        <div class="footer__contacts contacts">
+          <p class="contacts__title">Nёrds design studio</p>
+          <p class="contacts__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+          <a class="contacts__btn btn btn_full" href="#nowhere">Напишите нам</a>
+        </div>
+      </div>
+      <div class="footer__map">
         <img src="img/map-marker.png" width="1440" height="416" alt="карта">
-        <div class="page__wrapper">
-          <div class="footer__contacts contacts">
-            <p class="contacts__title">Nёrds design studio</p>
-            <p class="contacts__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-            <a class="contacts__btn btn" href="#nowhere">Напишите нам</a>
+      </div>
+      <div class="page__wrapper">
+        <div class="footer__bottom">
+          <ul class="footer__social social">
+            <li class="social__item">
+              <a class="social__link" href="#nowhere" aria-label="вконтакте">
+                <svg width="27" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#nowhere" aria-label="фейсбук">
+                <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#nowhere" aria-label="инстаграмм">
+                <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <div class="footer__right">
+            <p class="footer__slogan"><strong>Давайте дружить, это выгодно!</strong></p>
+            <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
           </div>
         </div>
       </div>
-      <div class="page__wrapper footer__wrapper">
-        <ul class="footer-social social">
-          <li class="social__item">
-            <a class="social__link" href="#nowhere" aria-label="вконтакте">
-              <svg width="27" height="15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#nowhere" aria-label="фейсбук">
-              <svg width="12" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#nowhere" aria-label="инстаграмм">
-              <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <div class="footer__right">
-          <p class="footer__slogan"><strong>Давайте дружить, это выгодно!</strong></p>
-          <p class="footer__discount">Скидка 10% для друзей из социальных сетей.</p>
-        </div>
-      </div>
     </footer>
+    <section class="popup">
+      <h2 class="popup__head">Напишите нам</h2>
+      <form class="popup__form" method="post" name="contact" action="https://echo.htmlacademy.ru">
+        <div class="popup__row">
+          <label class="popup__field">
+            <span class="popup__label">Ваше имя:</span>
+            <input class="popup__input" name="name" type="text" placeholder="Имя Фамилия" required>
+          </label>
+          <label class="popup__field">
+            <span class="popup__label">Ваш email:</span>
+            <input class="popup__input" name="name" type="email" placeholder="email@example.com" required>
+          </label>
+        </div>
+        <label class="popup__field">
+          <span class="popup__label">Текст письма:</span>
+          <textarea class="popup__textarea" name="msg" placeholder="В свободной форме" required></textarea>
+        </label>
+        <button class="popup__btn btn" type="submit">Отправить</button>
+      </form>
+      <button class="popup__close" type="button" aria-label="закрыть"></button>
+    </section>
   </body>
 </html>
