подогнал по пиксель перфекту

--- a/catalog.html
+++ b/catalog.html
@@ -56,15 +56,15 @@
               <div class="range-controls">
                 <div class="scale">
                   <div class="bar" style="
-                    width: 30%;
-                    margin-left: 20%
+                    width: 60%;
+                    margin-left: 7%
                   "></div>
                 </div>
                 <div class="toggle toggle-min" tabindex="0" style="
-                  left: 20%
+                  left: 7%
                 "></div>
                 <div class="toggle toggle-max" tabindex="0" style="
-                  left: 50%
+                  left: 61%
                 "></div>
               </div>
               <div class="price-controls">
@@ -187,7 +187,7 @@
                     <h3>Sedona</h3>
                   </a>
                   <p class="product__description">Информационный сайт <br> для туристов</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -201,7 +201,7 @@
                     <h3>Pink App</h3>
                   </a>
                   <p class="product__description">Продуктовый лендинг <br> приложения для iOS и Android</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -215,7 +215,7 @@
                     <h3>Barbershop</h3>
                   </a>
                   <p class="product__description">Сайт салона красоты.<br> Для мужчин, да.</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -229,7 +229,7 @@
                     <h3>Mishka</h3>
                   </a>
                   <p class="product__description">Интернет-магазин <br> вязаных игрушек</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -243,7 +243,7 @@
                     <h3>A Plus</h3>
                   </a>
                   <p class="product__description">Лендинг курсов повышения <br> квалификации</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -257,7 +257,7 @@
                     <h3>Кваст</h3>
                   </a>
                   <p class="product__description">Промо-сайт производителя <br> крафтового кваса</p>
-                  <a class="product__link" href="#nowhere">9 900 &#8381;</a>
+                  <a class="product__btn btn" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
             </li>
@@ -283,7 +283,7 @@
         <div class="page__wrapper footer__wrapper">
           <div class="footer__contacts contacts">
             <p class="contacts__title">Nёrds design studio</p>
-            <p class="contacts__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p class="contacts__address">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
             <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
             <a class="contacts__btn btn btn_full" href="#nowhere">Напишите нам</a>
           </div>
