--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="слайд первый">
               </div>
             </li>
-            <li class="slider-item slide">
+            <li class="slider__item slide slide_inner">
               <div class="slide__wrapper">
                 <h3 class="slide__tagline">Любим математику <br>как никто другой</h3>
                 <p class="slide__description">Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
@@ -67,7 +67,7 @@
                 <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="слайд второй">
               </div>
             </li>
-            <li class="slider-item slide">
+            <li class="slider__item slide slide_inner">
               <div class="slide__wrapper">
                 <h3 class="slide__tagline">Только ночь,<br> только хардкор</h3>
                 <p class="slide__description">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
@@ -177,7 +177,7 @@
       <div class="page__wrapper footer__wrapper">
         <div class="footer__contacts contacts">
           <p class="contacts__title">Nёrds design studio</p>
-          <p class="contacts__address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
           <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
           <a class="contacts__btn btn btn_full" href="#nowhere">Напишите нам</a>
         </div>
